--- a/manifest.plist
+++ b/manifest.plist
@@ -11,7 +11,7 @@
                     <key>kind</key>
                     <string>software-package</string>
                     <key>url</key>
-                    <string>https://tagken0000.github.io/ios-ota/app.ipa</string>
+                    <string>https://tagken0000.github.io/ios-ota/MobilePASS.ipa</string>
                 </dict>
                 <dict>
                     <key>kind</key>
@@ -29,3 +29,4 @@
     </array>
 </dict>
 </plist>
+
