--- a/manifest.plist
+++ b/manifest.plist
@@ -12,7 +12,7 @@
                     <key>kind</key>
                     <string>software-package</string>
                     <key>url</key>
-                    <string>https://USERNAME.github.io/ios-ota/MobilePASS.ipa</string>
+                    <string>https://tagken0000.github.io/ios-ota/MobilePASS.ipa</string>
                 </dict>
                 <!-- アイコン画像のURL（任意） -->
                 <dict>
@@ -31,3 +31,4 @@
     </array>
 </dict>
 </plist>
+
