--- a/manifest.plist
+++ b/manifest.plist
@@ -7,16 +7,12 @@
         <dict>
             <key>assets</key>
             <array>
-                <!-- IPAファイルのURL -->
-                <dict>
-                    <key>kind</key>
-                    <string>software-package</string>
+               >
                     <key>url</key>
-                    <string>https://tagken0000.github.io/ios-ota/MobilePASS.ipa</string>
+                    <string>https://tagken0000.github.io/ios-ota/icon.png</string>
                 </dict>
-                <!-- アイコン画像のURL（任意） -->
-                <dict>
-                   >
+            </array>
+            <key>metadata</key>
             <dict>
                 <key>bundle-identifier</key>
                 <string>com.safenetinc.mpbasic</string>
@@ -31,4 +27,3 @@
     </array>
 </dict>
 </plist>
-
