--- a/manifest.plist
+++ b/manifest.plist
@@ -7,7 +7,7 @@
         <dict>
             <key>assets</key>
             <array>
-               >
+               <dict>
                     <key>url</key>
                     <string>https://tagken0000.github.io/ios-ota/icon.png</string>
                 </dict>
@@ -27,3 +27,4 @@
     </array>
 </dict>
 </plist>
+
