--- a/manifest.plist
+++ b/manifest.plist
@@ -1,30 +1,49 @@
+
 <?xml version="1.0" encoding="UTF-8"?>
 <!DOCTYPE plist PUBLIC "-//Apple//DTD PLIST 1.0//EN" "http://www.apple.com/DTDs/PropertyList-1.0.dtd">
 <plist version="1.0">
 <dict>
-    <key>items</key>
-    <array>
+  <key>items</key>
+  <array>
+    <dict>
+      <key>assets</key>
+      <array>
+        <!-- 必須: IPAファイル -->
         <dict>
-            <key>assets</key>
-            <array>
-               <dict>
-                    <key>url</key>
-                    <string>https://tagken0000.github.io/ios-ota/icon.png</string>
-                </dict>
-            </array>
-            <key>metadata</key>
-            <dict>
-                <key>bundle-identifier</key>
-                <string>com.safenetinc.mpbasic</string>
-                <key>bundle-version</key>
-                <string>8.4.18</string>
-                <key>kind</key>
-                <string>software</string>
-                <key>title</key>
-                <string>MobilePASS</string>
-            </dict>
+          <key>kind</key>
+          <string>software-package</string>
+          <key>url</key>
+          <string>https://tagken0000.github.io/ios-ota/MobilePASS.ipa</string>
         </dict>
-    </array>
+        <!-- 任意: 表示用アイコン -->
+        <dict>
+          <key>kind</key>
+          <string>display-image</string>
+          <key>url</key>
+          <string>https://tagken0000.github.io/ios-ota/icon.png</string>
+        </dict>
+        <!-- 任意: フルサイズアイコン（無ければ削除可）
+        <dict>
+          <key>kind</key>
+          <string>full-size-image</string>
+          <key>url</key>
+          <string>https://tagken0000.github.io/ios-ota/icon@2x.png</string>
+        </dict>
+        -->
+      </array>
+
+      <key>metadata</key>
+      <dict>
+        <key>bundle-identifier</key>
+        <string>com.safenetinc.mpbasic</string>
+        <key>bundle-version</key>
+        <string>8.4.18</string>
+        <key>kind</key>
+        <string>software</string>
+        <key>title</key>
+        <string>MobilePASS</string>
+      </dict>
+    </dict>
+  </array>
 </dict>
 </plist>
-
